[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
crossterm = "0.27.0"
dotenv = "0.15.0"
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image =  { version = "0.24.7", features = ["png"] }
newsapi = { path = "./newsapi" }
serde = { version = "1.0.189", features = ["derive"] }

[build-dependencies]
winres = "0.1.12"