[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
eframe = "0.23.0"
reqwest = { version = "0.11.22", features = ["json"], optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
ureq = { version = "2.8.0", features = ["json"] }
url = "2.4.1"

[features]
async = ["reqwest"]
